[package]
name = "my-blogposts"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = ["default", "multipart", "macros"] }
tokio = { version = "1.0", features = ["full"] }
futures-util = "0.3.31"
uuid = { version = "1.11.0", features = ["v4"] }
chrono = { version = "0.4.38", features = ["serde"] }
tracing = "0.1.40"
bytes = "1.8.0"
serde = { version = "1.0.214", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["macros", "runtime-tokio", "sqlite", "chrono"] }
tower-http = { version = "0.6.1", features = ["full"] }
reqwest = { version = "0.12.9", features = ["blocking"]}
anyhow = "1.0.92"
